samples/_failures_safe/1761652927_3efecf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4cd4b23.c: In function ‘main’:
./samples/SAFE/__tmp_a4cd4b23.c:163:5: error: expected expression at end of input
  163 |     add_edge(&graph, 0, 1,
      |     ^~~~~~~~
./samples/SAFE/__tmp_a4cd4b23.c:163:5: error: expected declaration or statement at end of input
